# OpenCore

./: CMakeLists.txt  LICENSE  README.md
include/glad/: glad.h
res/: fragment.i  vertex.i
res/shaders/: fragment.fs  fragment.i  vertex.vs
src/: camera.cpp  camera.hpp  editorscene.hpp  glad.c  inputsystem.cpp  inputsystem.hpp  main.cpp  shader.cpp  shader.hpp  texture.hpp  time.hpp  window.cpp  window.hpp
src/objects/: mesh.cpp  mesh.hpp  texture.cpp  texture.hpp
src/renderer/: shader.cpp  shader.hpp  window.cpp  window.hpp
src/scenes/: editorscene.cpp  editorscene.hpp  scene.hpp
src/systems/: inputsystem.cpp  inputsystem.hpp
